<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="save">Simpan</string>
    <string name="result_predictions">Hasil - Hasil Prediksi</string>
    <string name="label">Label</string>
    <string name="scan">SCAN</string>
    <string name="history">HISTORY</string>
    <string name="news">NEWS</string>
    <string name="read_more">Read More</string>
    <string name="health_news">Health News</string>
</resources>