<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_margin="7dp"
    app:cardElevation="7dp"
    app:cardCornerRadius="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_news"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:contentDescription="@string/news"
            android:scaleType="fitXY"
            tools:src="@tools:sample/backgrounds/scenic"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:maxEms="12"
            android:maxLines="2"
            android:textStyle="bold"
            android:text="@string/app_name"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn_read_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/read_more"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>